2002-07-06  Don Porter  <dgp@users.sourceforge.net>

	* tests/pkgMkIndex.test:  Constrained tests of [load] package indexing
	to those platforms where the testing shared libraries have been built.
	[Bug 578166].

2002-07-05  Don Porter  <dgp@users.sourceforge.net>
	* changes: added recent changes

2002-07-05  Reinhard Max  <max@suse.de>

	* generic/tclClock.c (FormatClock): Convert the format string to
	UTF8 before calling TclpStrftime, so that non-ASCII characters
	don't get mangled when the result string is being converted back.
	* tests/clock.test: Added a test for that.

2002-07-05  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/Makefile.in (ro-test,ddd,GDB,DDD): Created new targets to
	allow running the test suite with a read-only current directory,
	running under ddd instead of gdb, and factored out some executable
	names for broken sites (like mine) where gdb and ddd are installed
	with non-standard names...

	* tests/httpold.test: Altered test names to httpold-* to avoid
	clashes with http.test, and stopped tests from failing when the
	current directory is not writable...

	* tests/event.test:		Stop these tests from failing
	* tests/ioUtil.test:		when the current directory is
	* tests/regexp.test:		not writable...
	* tests/regexpComp.test: 
	* tests/source.test: 
	* tests/unixFile.test: 
	* tests/unixNotfy.test: 

	* tests/unixFCmd.test:		Trying to make these test-files
	* tests/macFCmd.test:		not bomb out with an error when
	* tests/http.test:		the current directory is not
	* tests/fileName.test:		writable...
	* tests/env.test:

2002-07-05  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4b1 TAGGED FOR RELEASE ***

2002-07-04  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/cmdMZ.test (cmdMZ-1.4): 
	* tests/cmdAH.test: More fixing of writable-current-dir
	assumption. [Bug 575824]

2002-07-04  Miguel Sofer  <msofer@users.sourceforge.net>

	* tests/basic.test: Same issue as below; fixed [Bug 575817]
	