@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: fCmd.test,v 1.18 2002/07/02 12:16:05 vincentdarley Exp $
+# RCS: @(#) $Id: fCmd.test,v 1.19 2002/07/08 08:50:23 vincentdarley Exp $
 #
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -2163,8 +2163,6 @@ test fCmd-27.6 {TclFileAttrsCmd - setting more than one option} {foundGroup} {
     list [catch {eval file attributes foo.tmp [lrange $attrs 0 3]} msg] $msg [file delete -force -- foo.tmp]
 } {0 {} {}}
 
-tcltest::testConstraint hasLinks 1
-    
 if {[string equal $tcl_platform(platform) "windows"]} {
     if {[string index $tcl_platform(osVersion) 0] >= 5 \
       && ([lindex [file system [temporaryDirectory]] 1] == "NTFS")} {
@@ -2179,19 +2177,19 @@ if {[string equal $tcl_platform(platform) "windows"]} {
     tcltest::testConstraint linkDirectory 1
 }
 
-test fCmd-28.1 {file link} {hasLinks} {
+test fCmd-28.1 {file link} {
     list [catch {file link} msg] $msg
 } {1 {wrong # args: should be "file link ?-linktype? linkname ?target?"}}
 
-test fCmd-28.2 {file link} {hasLinks} {
+test fCmd-28.2 {file link} {
     list [catch {file link a b c d} msg] $msg
 } {1 {wrong # args: should be "file link ?-linktype? linkname ?target?"}}
 
-test fCmd-28.3 {file link} {hasLinks} {
+test fCmd-28.3 {file link} {
     list [catch {file link abc b c} msg] $msg
 } {1 {bad switch "abc": must be -symbolic or -hard}}
 
-test fCmd-28.4 {file link} {hasLinks} {
+test fCmd-28.4 {file link} {
     list [catch {file link -abc b c} msg] $msg
 } {1 {bad switch "-abc": must be -symbolic or -hard}}
 
